2017-01-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26904.

	* nasl/nasl_cert.c (build_hostname_list): Remove restriction on adding
	CN values without a dot.

2017-01-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r27373.

	* misc/prefs.c (prefs_set): Fix possible use-after-free when old and
	value point to the same data.

2016-11-22  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26704 and r26707.

	* misc/network.c (socket_negotiate_ssl, open_stream_connection_ext):
	Check Host/SNI/$Port/force_disable before setting the SNI.

2016-11-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26683.

	* misc/network.c (open_SSL_connection): Don't fail the handshake upon receiving a
	non-fatal alert like unrecognized name.

2016-11-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26648.

	* misc/network.c (is_ip_address): New function.
	(open_SSL_connection): Don't use hostname if it is an IP address.

2016-11-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26513 and r26527.

	* misc/network.c (open_SSL_connection): Add hostname parameter. Set TLS
	SNI accordingly.
	(socket_negotiate_ssl, open_stream_connection_ext): Adjust
	open_SSL_connection() call.

2016-10-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl_builtin_find_service.c (mark_rsyncd, plugin_do_run):
	Revert parts of r26328 to avoid introducing new symbols in the stable
	branch.

2016-10-04  Christian Fischer <christian.fischer@greenbone.net>

	Backport r26327.

	* nasl/nasl_builtin_find_service.c:
	Corrected registration of rsync service to match
	the service name defined by IANA.

2016-09-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26219.

	* base/openvas_networking.c (port_range_ranges): Check if parameter is
	null.

2016-08-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0.9.
